--- a/index.html
+++ b/index.html
@@ -4,19 +4,54 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <link rel="stylesheet" href="estilo_general.css">
 </head>
 <body>
+<span id="costado">
+    <span id="botones">
+        <button id="normal" style="background-color: #9095A0;">Normal</button>
+        <button id="grass" style="background-color: #459b61;">Glass</button>
+        <button id="fire" style="background-color: orange;">Fire</button>
+        <br>
+        <button id="water" style="background-color: #5c6db5;">Water</button>
+        <button id="bug" style="background-color: #74c68d;">Bug</button>
+        <button id="electric" style="background-color: #fdd46a;">Electric</button>
+        <br>
+        <button id="rock" style="background-color: #626864;">Rock</button>
+        <button id="ghost" style="background-color: #8f74c6;">Ghost</button>
+        <button id="poison" style="background-color: #cbafea;">Poison</button>
+        <br>
+        <button id="fighting" style="background-color: #c67474;">Fighting</button>
+        <button id="dragon" style="background-color: #e16d6d;">Dragon</button>
+        <button id="ground" style="background-color: #dbc74b;">Ground</button>
+        <br>
+        <button id="psychic" style="background-color: #cc45d6;">Psychic</button>
+        <BR></BR>
+        <button id="reset" style="background-color: #000000;">RESET</button>
+    </span>
+    <div class="input-group mb-3">
+        <span class="input-group-text"><img src="/Pokeball_icon-icons.com_67533.png" alt="?"></span>
+        <div class="form-floating">
+          <input type="text" class="form-control" id="floatingInputGroup1" placeholder="Username">
+          <label for="floatingInputGroup1">Buscar</label>
+        </div>
+      </div>
+</span>
+
 <div class="arriba"> 
     <span id="azul"><span id="ovalgrisazul"> <span id="ovalazul"><span id="ovalazulsombra"><span id="ovalazuldentro"><span id="ovalazulluz"></span></span></span></span></span></span>
     <span id="rojo"><span id="ovalgrisrojo"> <span id="ovalrojo"><span id="ovalrojosombra"><span id="ovalrojodentro"><span id="ovalrojoluz"></span></span></span></span></span></span>
     <span id="amarillo"><span id="ovalgrisamarillo"> <span id="ovalamarillo"><span id="ovalamarillosombra"><span id="ovalamarillodentro"><span id="ovalamarilloluz"></span></span></span></span></span></span>
     <span id="verde"><span id="ovalgrisverde"> <span id="ovalverde"><span id="ovalverdesombra"><span id="ovalverdedentro"><span id="ovalverdeluz"></span></span></span></span></span></span>
-  
 </div>
-<br>
-<span id="abajo"> parte abajo</span>
-<br>
-<span id="costado">costado</span>
+
+<div id="abajo"> 
+    <span id="cuadradogris"><span id="cuadradonegro"></span>
+    <span id="rojoabajo"><span id="ovalgrisrojo"> <span id="ovalrojo"><span id="ovalrojosombra"><span id="ovalrojodentro"><span id="ovalrojoluz"></span></span></span></span></span></span></span>
+</div>
+
+
 </body>
 </html>
