funcionalidades de busqueda

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div class="input-group mb-3">
         <span class="input-group-text"><img src="/Pokeball_icon-icons.com_67533.png" alt="?"></span>
         <div class="form-floating">
-          <input type="text" class="form-control" id="floatingInputGroup1" placeholder="Username">
+          <input id="buscador" type="text" class="form-control" id="floatingInputGroup1" placeholder="Username">
           <label for="floatingInputGroup1">Buscar</label>
         </div>
       </div>
@@ -56,9 +56,9 @@
                 <div class="card-body" >
                   <h5 class="card-title">Pokemon</h5>
                   
-                  <a href="#" class="btn btn-primary" style="height: 10%;">+</a>
+                  <a  href="#" class="btn btn-primary" style="height: 10%;">+</a>
                 </div>
-              </div> 
+            </div> 
               
         </span>
         <span id="info2">
